# mapuche

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  todolist
proto/: raftrpc.proto
src/: client.rs  config.rs  connection.rs  db.rs  frame.rs  gc.rs  hash_ring.rs  lib.rs  parse.rs  server.rs  shutdown.rs  utils.rs
src/cmd/: auth.rs  cmdtype.rs  del.rs  exists.rs  expire.rs  get.rs  hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hstrlen.rs  hvals.rs  incrdecr.rs  keys.rs  lindex.rs  linsert.rs  llen.rs  lrange.rs  lrem.rs  lset.rs  ltrim.rs  mget.rs  mod.rs  mset.rs  ping.rs  pop.rs  publish.rs  push.rs  sadd.rs  scan.rs  scard.rs  set.rs  sismember.rs  smembers.rs  smismember.rs  (+20 more)
src/metrics/: http.rs  mod.rs
src/p2p/: channel.rs  client.rs  message.rs  mod.rs  server.rs
src/raft/: app.rs  client.rs  meta.rs  mod.rs  store.rs  test.rs
src/raft/network/: api.rs  management.rs  mod.rs  raft.rs  raft_network_impl.rs  rpc.rs
src/rocks/: client.rs  errors.rs  hash.rs  list.rs  mod.rs  set.rs  string.rs  transaction.rs  zset.rs
src/rocks/encoding/: decode.rs  encode.rs  mod.rs
src/rocks/kv/: bound_range.rs  key.rs  kvpair.rs  mod.rs  value.rs
tests/: test_cluster.rs  transaction_test.rs
