[package]
authors = ["xiaoyuz <alexanderxiaoyu@gmail.com>"]
name = "mapuche"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "mapuche-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rocksdb = { version = "0.19.0", features = ["multi-threaded-cf"] }
thiserror = "1"
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.18.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.18.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.6.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.11.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
futures = { version = "0.3" }
regex = "1"
rand = {version = "0.8.5", features = ["small_rng"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = { version = "2.4" }
toml = { version = "0.7.2" }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]
