[package]
authors = ["xiaoyuz <xiaoyuz@opera.com>"]
name = "mapuche"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
An implementation of a Redis protocol server, with RocksDB as KV storage.
"""

[[bin]]
name = "mapuche-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
futures = { version = "0.3" }
regex = "1"
rand = {version = "0.8.5", features = ["small_rng"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = { version = "2.4" }
toml = { version = "0.7.2" }
prometheus = { version = "0.13.0", features = ["process"]}
hyper = { version = "0.14.17", features = ["full"] }
pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec"] }
crc = "2.0"
tokio-util = { version = "0.7.1", features = ["rt"] }
sysinfo = "0.28.0"
glob = "0.3.1"
anyhow = "1.0.70"
local-ip-address = "0.5.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
twox-hash = "1.6.0"
openraft = { version = "0.8.2", features = ["serde"] }
serde_json = "1.0.57"
byteorder = "1.4.3"
anyerror = { version = "0.1.7" }
async-trait = "0.1.64"
actix-web = "4"
reqwest = { version = "0.11.9", features = ["json"] }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
anyhow = "1.0.63"
maplit = "1.0.2"
tempfile = { version = "3.4.0" }
